# sjconf-sysctl

./: .gitignore  ChangeLog  Makefile.am  README.rst  configure.ac
confs/: Makefile.am  sysctl.conf
debian/: changelog  control  copyright  rules  sjconf-sysctl.install  sjconf-sysctl.postinst  sjconf-sysctl.prerm
doc/: Makefile.am  sjconf-sysctl.t2t
plugins/: sysctl.py.in
