dnl Process this file with autoconf to produce a configure script.
AC_INIT(sjconf-sysctl, 0.2.0)

AC_PREREQ(2.67)

AM_INIT_AUTOMAKE([foreign])

AC_PROG_SJCONF
AC_PATH_PROG(TXT2TAGS, txt2tags)

AC_CONFIG_FILES([Makefile \
                 doc/Makefile \
                 confs/Makefile \
                 plugins/sysctl.py \
                 ])

AC_OUTPUT
